# Edge-Tensor-Engine

./: .gitignore  Cargo.toml  README.md  benchmark_results.txt  run.sh  test.sh
benches/: matmul_bench.rs
dart_example/: pubspec.yaml
dart_example/lib/: tensor_engine.dart
src/: lib.rs
src/autograd/: engine.rs  mod.rs  node.rs  tests.rs
src/ffi/: c_abi.rs
src/nn/: attention.rs  attention_rope.rs  kv_cache.rs  linear.rs  mod.rs
src/ops/: binary.rs  matmul.rs  mod.rs  tests.rs  unary.rs
src/tensor/: mod.rs  storage.rs  tensor_impl.rs  tests.rs
